# accountant-agent

./: .gitignore  README.md  contradictions.md
backend/: .env.example  pyproject.toml  start.sh
backend/accountingos_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  actions.py  ai.py  b2.py  capability_check.py  close_execution.py  close_mapping.py  connections.py  domain.py  durable_worker.py  evidence.py  expansion.py  google_oauth.py  groq.py  ingestion.py  main.py  normalization.py  plaid_link.py  plaid_webhooks.py  production_preflight.py  provider_runtime.py  providers.py  reconciliation.py  reports.py  scenario.py  secrets_store.py  security.py  supabase_auth.py  supabase_db.py  worker.py  worker_main.py  xero_oauth.py
backend/evidence/: example-capability-evidence.json  example-xero-baseline.json
backend/migrations/: 0001_phase1_boundaries.sql  README.md
backend/scenarios/: demo-scenario-v1.json
backend/tests/: test_api.py  test_b2.py  test_callback_registration.py  test_close_execution.py  test_domain.py  test_durable_worker.py  test_groq.py  test_oauth_session_store.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_plaid_webhooks.py  test_production_preflight.py  test_provider_onboarding.py  test_provider_onboarding_api.py  test_provider_runtime.py  test_scenario.py  test_secrets_store.py  test_supabase.py  test_supabase_auth.py  test_worker.py  test_xero_oauth.py  test_xero_oauth_api.py  test_xero_tenants.py
docs/: PRD.md  README.md  TDD.md  (+8 more)
(+34 files in other folders)
